--- a/app/src/main/res/layout/item_calendar_day.xml
+++ b/app/src/main/res/layout/item_calendar_day.xml
@@ -3,12 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:paddingVertical="4dp"
+    android:minHeight="@dimen/day_cell_min_height"
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/dayNumber"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:gravity="center"
         android:textSize="14sp"
         android:textColor="@android:color/black" />
@@ -18,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="4dp"
         android:paddingHorizontal="2dp" />
 
 </LinearLayout>
