--- a/app/src/main/res/layout/nav_header_drawer.xml
+++ b/app/src/main/res/layout/nav_header_drawer.xml
@@ -7,15 +7,11 @@
     android:gravity="center_vertical"
     android:background="@android:color/white">
 
-    <TextView
+    <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/circle_button_background"
-        android:gravity="center"
-        android:text="31"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:src="@drawable/ic_calendar_logo"
+        android:contentDescription="@string/app_name" />
 
     <TextView
         android:layout_width="wrap_content"
