--- a/app/src/main/res/drawable/grid_item_border.xml
+++ b/app/src/main/res/drawable/grid_item_border.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- The main background color (white) -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
+    <!-- The grid lines (divider color) -->
+    <item android:top="-2dp" android:left="-2dp">
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="0.5dp"
+                android:color="#E0E0E0" /> <!-- Light gray for the line -->
+        </shape>
+    </item>
+</layer-list>
