--- a/app/src/main/res/layout/page_month.xml
+++ b/app/src/main/res/layout/page_month.xml
@@ -4,5 +4,5 @@
     android:id="@+id/monthGridRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@drawable/top_border_only"
     android:overScrollMode="never" />
