--- a/app/src/main/res/layout/page_week.xml
+++ b/app/src/main/res/layout/page_week.xml
@@ -1,32 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/weekPageScroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:scrollbars="none">
 
+    <!-- Days columns container only (time labels are fixed outside ViewPager) -->
     <LinearLayout
+        android:id="@+id/weekDaysColumns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <!-- Time labels column -->
-        <LinearLayout
-            android:id="@+id/timeLabelsColumn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/white" />
-
-        <!-- Days columns container -->
-        <LinearLayout
-            android:id="@+id/weekDaysColumns"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:background="@android:color/white" />
-
-    </LinearLayout>
+        android:orientation="horizontal"
+        android:background="@android:color/white" />
 
 </ScrollView>
