AI Process fix pending

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.smartcalendar.MainActivity">
     <item
+        android:id="@+id/action_ai"
+        android:icon="@android:drawable/ic_btn_speak_now"
+        android:title="@string/ai_assistant"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_sync"
         android:icon="@android:drawable/ic_popup_sync"
         android:title="@string/action_sync"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
 </menu>
